examples/positive/L3/const_diff_scope.ob
MODULE ConstDiffScope;

CONST x = 42;

PROCEDURE f;
  CONST x = 40;
  BEGIN
    Write(x); WriteLn;
  END f;
BEGIN
  f;
  Write(x); WriteLn;
  f;
END ConstDiffScope.
