examples/negative/name_errors/L1/5_const_var_same.ob
MODULE ConstVarSame;

CONST x=42;

VAR x: INTEGER;

END ConstVarSame.
